fixed jumping text on top search when loading

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -381,6 +381,8 @@ a.nav-username:hover
   margin: 11px 27px 0 0
   border-radius: 6px
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.75) inset, 0 1px 0 rgba(180, 220, 225, 0.2)
+  .loading
+    margin-top: 0px
   .submit
     display: block
     width: 19px
